<resources>
    <string name="app_name">LearnSelf</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="composition_1_title">\t\tOn Opening Psychological Courses（开放心理课程）</string>
    <string name="composition_1_content">\t\t Many universities and colleges have now decided to open more psychological courses to their students. This is totally advisable and has been warmly welcomed. \n\t\tIn the first place psychological courses are in urgent need in colleges and universities. Today students are under tremendous pressures. They have economical and academic pressures and pressures coming from interpersonal relations as well. These pressures may bring them anxiety， depression， and despair. Some students even committed suicide for these pressures. The psychological courses may teach them how to deal with pressures. And thus can be very good for the students\' mental health. In the second place such courses may help students deal with problems in the future. And therefore beneficial to the whole society. The courses teach students howto regulated feelings and emotions in different situations which can be of great use when they graduate and go to work.  \n\t\tAs for me， I think it\'s a wise idea to open more psychological courses to the students.   </string>
    <string name="composition_2_title">\t\tWork In the Countryside（乡村工作）  </string>
    <string name="composition_2_content">\t\t Many university graduates now volunteer to work in the countryside. It is reported that once hundreds of university graduates competed with one another to work as a village leader in Beijing. \n\t\tMany factors have contributed to this phenomenon. First， with more and more university students graduating each year， the job market competition becomes increasingly fierce and many graduates can not find jobs in the cities. Working in the countryside is better than being jobless. Second， the villages that are trying to employ university graduates are generally in the rich area of the country which makes working there an attractive choice. Third， some university graduates being from the countryside are eager to go back home to contribute to construction their hometown with their knowledge and enthusiasm. They will play important role in building the new countryside.\n\t\tPersonally， I think university graduates should go to work where they are needed most and where they can make full use of their talents. Working in the countryside can be truly an advisable choice.</string>
    <string name="composition_3_title">\t\tHow Long Should the National Holiday Be?（国家法定假期多长合适？）</string>
    <string name="composition_3_content">\t\t How Long Should the National Holiday Be?   It goes without saying that some people prefer long vacations because they can have enough time to do things that cannot be finished within a short time. During a long vacation， they may make a complicated experiment， carry out an involved investigation or go to a faraway place for some necessary field work. \n\t\tTaking a full time job to earn money for one or two months is another benefit the long vacation provides and sometimes a good academic thesis with a considerable length needs a long vacation.    What is more， those who favor short vacations also have understandable reasons. For two or three weeks\' rest is adequate for students to refresh themselves without forgetting the lessons that are to be continued next semester. Short vacations also mean to rest three times a school year and short semesters. To study in this way is easier than to study for a long exhausting time with many courses and lessons crammed together.  \n\t\tAs has been noted， either long or short vacation has its advantages and disadvantages. What matters is how to make use of it.   </string>
    <string name="composition_4_title">\t\tThe Safety of Food（食品安全）</string>
    <string name="composition_4_content">\t\t Reports of food poisonings or tainted food have been frequent in China. In late 2006， illegal amount of chemicals was discovered in turbot. In March 2007， KFC was accused of adding oil filtering power. In September 2008， a fresh outbreak of kidney disease occurred， due to baby formula contaminated by melamine， a poisonous chemical.   \n\t\tThese incidents happened so frequently mainly because the government failed to inspect efficiently. Though there are around ten national government departments and numerous provincial and local agencies that share the responsibility to ensure food safety and monitor local food production and sales， their duties are often overlapping and ambiguous， which makes the monitoring system unresponsive. \n\t\tIn my opinion， to guarantee the food safety， the government should attach great importance to food inspection and improve the supervision mechanism. They should check the food products in the market， and immediately pull those disqualified products off shelves. In this way， Chinese food will conform to the standard and thus become safer and safer.</string>
    <string name="composition_5_title">\t\tGlobal Shortage of Fresh Water（全球缺水）  </string>
    <string name="composition_5_content">\t\t Many people believe that fresh water will never be used up. They think that fresh water comes from such varieties of sources that it is always sufficient for us. Such opinion leads to surprising waste of water.    \n\t\tAs a matter of fact， the earth is short of fresh water. Furthermore， with the rapid growth of the world\'s population， the rising demand of water by industry， and the serious pollution of our surroundings， the world is facing the danger of running out of fresh water. Actually， in some big cities， fresh water cannot meet the daily needs.  \n\t\t Therefore， it is up to us to find new ways to save water. First， we should make the best use of water， and not waste it. Second， scientists must work even harder to purify seawater， polluted water and try to find solutions in industry to reduce the use of fresh water.</string>
    <string name="composition_6_title">\t\tOn Housing Reform（住房改革） </string>
    <string name="composition_6_content">\t\tThe old house allotting policy had at least two disadvantages. First， the government spent a lot of money building some houses， but these houses were allotted to people free of charge. Thus， the government would have no money to build more houses for people who badly needed them. Second， the persons who were in power could get more houses than those who were powerless. This was quite unfair.    \n\t\tOn the contrary， the new system of house allotment may bring about many new things. For example， the government will have more buildings，which can be sold to people. The chances for them will be equal.    \n\t\tWhen I enter the society， I would get a loan from the bank to buy my own house. Then， I would try to pay back the loan as soon as possible. After that， I would proudly claim， “Now， I am the master of that house.” </string>
    <string name="composition_7_title">\t\tOverseas Study at an Early Age（低龄留学）</string>
    <string name="composition_7_content">\t\t Nowadays more and more parents are eager to send their children to study abroad before they finish high school by whatever means and at whatever cost.  \n\t\t It is quite understandable for parents to send their children to study overseas because they place high expectations on their children. They are encouraged by the success stories of those who have completed their overseas study. With the development of economy， companies and institutions at home are giving more and more emphasis on overseas experiences， too. Consequently， pursuing overseas study became a kind of short cut in gaining a better future. Moreover， there is still one underlying reason for this rush economic reason. The rapid economic progress in the past few years in China has enabled more and more parents to afford the huge cost for their children\'s overseas study.   \n\t\tAs for me， overseas study is surely a helpful way to get both advanced knowledge and necessary experiences， but overseas study at an early age is neither necessary nor beneficial. The students may be too young to either tend for themselves or think for themselves. I do think that overseas study can contribute to one\'s selfimprovement， but it\'s better to be pursued after one has finished his college study at home， when he is more capable of learning and living on his own.</string>
    <string name="composition_8_title">\t\tHow Will Our Life Go on Without Internet?（没有互联网如何生活？）</string>
    <string name="composition_8_content">\t\tHow Will Our Life Go on Without Internet?    If asked whether the Internet is the greatest discovery of the 20th century， my answer would be yes. The Internet has drawn the world closer together， realized countless incredible dreams， and provided modern people with a great many conveniences and a brilliant life。    \n\t\tToday， many people simply feel they cannot live without the Internet. Governments publish their latest policies and decisions online for worldwide recognition. Political campaigns are often done online to gain wider public support. Companies and enterprises resort to the Internet for more business opportunities and potential customers home and abroad. Universities and researchers turn to the Internet if they‟d seek international cooperation or funding. Common folks like us also rely on the cyber world in various ways， for communication， entertainment， banking and shopping。\n\t\tTrue， the power of the Internet is all pervasive and its many negative effects are already visible. For example， Internet addicts tend to withdraw to their own fantasy world rather than communicate with a real person. Children are exposed to online pornography and violence. Internet frauds are an everyday occurrence. In view of all this， you are advised to use the Internet with wisdom. Keep it at a safe distance and never lose yourself。</string>
    <string name="composition_9_title">\t\tThe Rise of Shanzhai Culture（山寨文化）   </string>
    <string name="composition_9_content">\t\tThe vast array of knockoff name-brand products， such as cell phones， DVDs， MP3 players， have made “shanzhai” the hottest word of the year. With the media all over the rise of shanzhai culture， public opinions are clearly divided。   Advocates associate it with innovation， the DIY spirit， open-mindedness and practicality， as shanzhai products often mix imitation with innovation – a similar skin but a different heart. The end products are usually more functional and much cheaper than the original. Besides， they respond to the market more swiftly and they are more considerate in design. Thanks to them， more people at the grassroots level can enjoy the benefit of modern technology。   \n\t\tHowever， other people， including myself， hold more reserved attitudes towards the shanzhai fever. For all the popularity it has won， a copycat is a copycat. The mockery of the prestige products not only steals their profits but also upsets market competition. Moreover， shanzhai products thrive on the current legal loopholes. Under the disguise of anti-dominance slogans， they make illegal profits by violating intellectual property rights and evading taxes. \n\t\tAnd to top it off， the so-called innovation is only senseless talk as true innovation always faces huge costs and potential failures， while plagiarism simply builds success on other people\'s risks。  </string>
    <string name="composition_10_title">\t\t题目10：Cooperation（合作）</string>
    <string name="financial_part_one">社会经济理论</string>
    <string name="financial_part_two">财政学</string>
    <string name="financial_part_four">国际经济学</string>
    <string name="financial_part_five">西方经济学</string>
    <string name="financial_part_six">计算与证明</string>
</resources>